# shippy

./: .env.example  .gitignore  README.md  Readme.md  pyproject.toml
.github/workflows/: test.yml
shippy/: __init__.py  gateway.py  shipment.py
shippy/base/: client.py  config.py  errors.py  models.py  schemas.py  utils.py
shippy/gls/: __init__.py  client.py  config.py  requests.py  utils.py
shippy/gls/schemas/: __init__.py  base.py  cancelShipmentResponse.py  createShipmentRequest.py  createShipmentResponse.py  rateShipmentRequest.py  rateShipmentResponse.py
shippy/ups/: __init__.py  client.py  config.py  requests.py  utils.py
shippy/ups/schemas/: __init__.py  base.py  cancelShipmentResponse.py  createShipmentRequest.py  createShipmentResponse.py  createTokenRequest.py  createTokenResponse.py  paperlessDocumentImageRequest.py  paperlessDocumentImageResponse.py  paperlessDocumentUploadRequest.py  paperlessDocumentUploadResponse.py  rateShipmentRequest.py  rateShipmentResponse.py
tests/: conftest.py  fixtures.py
tests/base/: test_utils.py
tests/gls/: test_rates.py  test_shipment.py
tests/ups/: test_auth.py  test_invoice_upload.py  test_rates.py  test_shipment.py
