[tool.poetry]
name = "shippy"
version = "0.1.0"
description = ""
authors = [
    "hiaselhans <simon.klemenc@gmail.com>",
    "dankgen-tobias <tobias.mitterdorfer97@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
pydantic = "^1.10.1"
python-dotenv = "^1.0.0"
python-dateutil = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.1"
isort = "^5.12.0"
black = "^23.1.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 90


